[package]
name = "rust-servicemesh"
version = "0.1.0"
edition = "2021"
authors = ["HueCodes"]

[lib]
name = "rust_servicemesh"
path = "src/lib.rs"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full", "tracing"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tonic = { version = "0.12", features = ["tls"] }
rustls = "0.23"
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["full"] }
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.8"
futures = "0.3"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
http = "1.0"
prometheus-client = "0.22"
once_cell = "1.21"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
