[package]
name = "rust-servicemesh"
version = "0.1.0"
edition = "2021"
authors = ["HueCodes"]
description = "A high-performance service mesh data plane proxy supporting HTTP/1.1, HTTP/2, and gRPC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HueCodes/Rust-ServiceMesh"
keywords = ["service-mesh", "proxy", "http2", "grpc", "async"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[lib]
name = "rust_servicemesh"
path = "src/lib.rs"

[[bin]]
name = "proxy"
path = "src/main.rs"

[[bench]]
name = "proxy_benchmark"
harness = false

[dependencies]
tokio = { version = "1.41", features = ["full", "tracing", "sync", "time", "rt-multi-thread"] }
hyper = { version = "1.5", features = ["full", "http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["full", "tokio", "server", "client", "http1", "http2"] }
http-body-util = "0.1"
tonic = { version = "0.12", features = ["tls", "transport"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
webpki-roots = "0.26"
tower = { version = "0.5", features = ["full", "util", "limit", "retry", "timeout", "load-shed"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "limit", "cors"] }
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes = "1.8"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
http = "1.0"
prometheus-client = "0.22"
once_cell = "1.21"
parking_lot = "0.12"
arc-swap = "1.7"
regex = "1.10"
rand = "0.8"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"

[features]
default = ["http2", "tls"]
http2 = []
tls = []
grpc = []
full = ["http2", "tls", "grpc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
lto = true
